@@ -162,7 +162,7 @@ public class YahooAdsBidder implements Bidder<BidRequest> {
         if (CollectionUtils.isEmpty(bannerFormats)) {
             throw new PreBidException("No sizes provided for Banner");
         }
-        final Format firstFormat = bannerFormats.get(0);
+        final Format firstFormat = bannerFormats.getFirst();
 
         return banner.toBuilder()
                 .w(firstFormat.getW())
