@@ -74,7 +74,7 @@ public class VideoResponseFactoryTest extends VertxTest {
         assertThat(result.getAdPods()).hasSize(1)
                 .extracting(ExtAdPod::getTargeting)
                 .hasSize(1)
-                .extracting(extResponseVideoTargetings -> extResponseVideoTargetings.get(0))
+                .extracting(extResponseVideoTargetings -> extResponseVideoTargetings.getFirst())
                 .extracting(ExtResponseVideoTargeting::getHbCacheID)
                 .containsOnly("generatedId");
         assertThat(cachedDebugLog.hasBids()).isFalse();
